# 08_EDA_Analysis_Study

./: main.py  pyproject.toml
Practice/: 01_EDA_Analysis.ipynb
